fix input::-webkit-contacts-auto-fill-button color for dark mode

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,6 +18,10 @@
   cursor: default;
 }
 
+input.login::-webkit-contacts-auto-fill-button {
+  background-color: hsl(var(--login-foreground)) !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
